--- a/ManniMies/ManniMies.csproj
+++ b/ManniMies/ManniMies.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
         <None Update="Content\kentta1.txt">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="Content\maali.wav">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -22,6 +22,12 @@
         </None>
         <None Update="Content\tahti.png">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Content\kentta2.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Content\kentta3.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
